# docs/swagger.json
@@ -9,7 +9,7 @@
     "host": "localhost:5000",
     "basePath": "/",
     "paths": {
-        "/channel-level": {
+        "/code": {
             "post": {
                 "description": "Используется для передачи данных через канальный уровень с учетом возможности ошибок и потерь.",
                 "consumes": [
@@ -37,22 +37,25 @@
                     "200": {
                         "description": "Успешный ответ",
                         "schema": {
-                            "$ref": "#/definitions/server.Segment"
+                            "$ref": "#/definitions/server.ResponseMessage"
                         }
                     },
                     "204": {
-                        "description": "Пакет утерян"
+                        "description": "Пакет утерян",
+                        "schema": {
+                            "$ref": "#/definitions/server.ResponseMessage"
+                        }
                     },
                     "400": {
                         "description": "Некорректный запрос",
                         "schema": {
-                            "$ref": "#/definitions/server.ErrorResponse"
+                            "$ref": "#/definitions/server.ResponseMessage"
                         }
                     },
                     "500": {
                         "description": "Внутренняя ошибка сервера",
                         "schema": {
-                            "$ref": "#/definitions/server.ErrorResponse"
+                            "$ref": "#/definitions/server.ResponseMessage"
                         }
                     }
                 }
@@ -60,7 +63,7 @@
         }
     },
     "definitions": {
-        "server.ErrorResponse": {
+        "server.ResponseMessage": {
             "type": "object",
             "properties": {
                 "message": {
